# anki-frontend

./: .env.example  .gitignore  README.md  Tiltfile  dev.sh  index.html  package.json  vite.config.ts
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
chart/: Chart.yaml  values.yaml
chart/templates/: backend.yaml  deployment.yaml  ingress.yaml  service.yaml
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/screens/: DeckList.tsx  Review.tsx
src/: App.tsx
src/api/: client.ts
src/screens/: Review.tsx
