[project]
name = "anki-backend"
version = "0.1.0"
description = "API over the anki library for the self-hosted web UI"
requires-python = ">=3.11"
dependencies = [
    "anki>=26.5",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
